# investment-os

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE_ANALYSIS_TOOLS.md  README.md  SKILL-02.md  SKILL.md  approved_instruments.json  daily_signal.json  paper_trades.example.json  paper_trades.json  portfolio_state.example.json  portfolio_state.json  project_investment_os.md  sector_rotation.json  target_allocation.json  trading_strategy_prompt.md  user_config.example.json  user_profile.md  watchlist.json
investment-os/backend/: .env.example  main.py  preview_data.duckdb  pyproject.toml  scratch_db.py  scratch_kite.py  scratch_test_sheet.py  test_crawl.py
investment-os/backend/agents/: README.md
investment-os/backend/agents/cio/: agent.py  config.py  instructions.md  tools.py
investment-os/backend/agents/macro/: agent.py  config.py  instructions.md  tools.py
investment-os/backend/agents/tech_fund/: agent.py  config.py  instructions.md  tools.py
investment-os/backend/database/: connection.py  schema.sql
investment-os/backend/models/: schemas.py
investment-os/backend/routers/: agent_chat.py  holdings.py  intelligence.py  portfolio.py  sector_rotation.py  snapshots.py  sync.py  transactions.py  world_view.py
investment-os/backend/scheduler/: jobs.py
investment-os/backend/scripts/: __init__.py  run_daily_ingestion.py  seed_data.py
investment-os/backend/services/: agent_service.py  analytics_service.py  data_fetcher.py  kite_data_fetcher.py  kite_service.py  mf_intelligence.py  sector_rotation_service.py  sheets_service.py  sync_service.py  world_data_fetcher.py
investment-os/backend/src/investment_os/: __init__.py
investment-os/backend/src/investment_os/analysis/: __init__.py  fundamental_scorer.py  sector_scorer.py  technical_scorer.py
investment-os/backend/src/investment_os/core/: __init__.py  config.py  logging.py
investment-os/backend/src/investment_os/data_layer/: __init__.py  db.py
investment-os/backend/src/investment_os/data_layer/clients/: __init__.py  (+2 more)
investment-os/backend/src/investment_os/tools/: __init__.py  analysis_tools.py
(+54 files in other folders)
