[project]
name = "investment-os-backend"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "duckdb>=0.10.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "kiteconnect>=5.0.1",
    "gspread>=6.1.0",
    "google-auth>=2.30.0",
    "scipy>=1.13.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "uuid7>=0.1.0",
    "google-genai>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "crawl4ai>=0.4.0",
]

[project.scripts]
seed-data = "scripts.seed_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["data", ".env*", "*.duckdb"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
